crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/zero/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Array with zero length specified.
   ╭─[input.sol:6:13]
   │
 6 │     uint256[0] x;
   │             ┬  
   │             ╰── Error occurred here.
───╯
